# GeoPipe

./: .gitignore  Dockerfile  README.md  detecção de sombra.json  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  requirements_win.txt  run.command  run.py  setup-file.py  teste.json  teste_canny.json  utils.py
conf/base/: catalog.yml  parameters.yml  parameters_area_and_volume_estimation.yml  parameters_calculate_spectral_indices.yml  parameters_canny.yml  parameters_cfmask_preprocess.yml  parameters_deepwatermap.yml  parameters_download.yml  parameters_download_and_preprocess.yml  parameters_fmask_preprocess.yml  parameters_unet.yml  parameters_water_segmentation_tensorflow_model.yml  parameters_watnet.yml
data/00_shapefiles/: argemiro_reservatorio.geojson  baia_da_traicao.geojson  engenheiro_avidos_reservatorio.geojson  gamame_mamuaba_reservatorio.geojson  gramame.geojson  lagoa_do_arroz_reservatorio.geojson  mare_reservatorio.geojson  santa_luzia.geojson  sume.geojson  sume_reservatorio.geojson
fmask-pipeline/: pyproject.toml  requirements.txt
fmask-pipeline/notebooks/: explore_shapefiles.ipynb
notebooks/: aesa_analisys.ipynb  deep_water_map_cloud_removal_analisys.ipynb  deep_water_map_cloud_removal_analisys_off.ipynb  deep_water_map_cloud_removal_analisys_with_fmask.ipynb  general_area_analises.ipynb  get_clouds_percentage.ipynb  image_visualization.ipynb  rename.ipynb  volume_estimation.ipynb  watnet_test.ipynb
shapefiles/: .fuse_hidden00048d920000011e  .fuse_hidden00048da600000120  .fuse_hidden00049bc700000121  .fuse_hidden00049bc900000122
(+1120 files in other folders)
